--- a/src/components/app.css
+++ b/src/components/app.css
@@ -17,7 +17,7 @@
   outline: none;
   box-shadow: 0 0 6px #ddd;
   padding: 10px;
-  border-radius: .25em;
+  border-radius: .25em 0 0 .25em;
 }
 
 .search-bar:focus{
@@ -29,10 +29,24 @@
   border: none;
   padding: 10px 20px;
   color: grey;
+  border-radius: 0 .25em .25em 0;
+  margin-right: .5em;
+}
+
+.filter{
+  padding: .5em;
+  border-radius: .25em;
+  border: none;
+  outline: none;
 }
 
 .recipes{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+
+.header{
+  margin-top: 0;
+  text-align: center
 }
